Modificacion de vistas

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="utf-8">
     <title>Seguridad Denuncia Jujuy</title>
 
-    <link href="src/bootstrap/superhero/bootstrap.css" rel="stylesheet"/>
+    <link href="/src/bootstrap/yeti/bootstrap.css" rel="stylesheet"/>
+    <link href="/src/bootstrap/styles.css" rel="stylesheet"/>
+
 
   </head>
   <body>
