Se modifican pantallas y se agregan resumen

--- a/index.html
+++ b/index.html
@@ -6,13 +6,15 @@
 
     <link href="/src/bootstrap/yeti/bootstrap.css" rel="stylesheet"/>
     <link href="/src/bootstrap/styles.css" rel="stylesheet"/>
+    <!-- vue -->
+    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.2.0/dist/leaflet.css">
 
 
   </head>
   <body>
     <div id="app"></div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-
+    <script src="https://unpkg.com/leaflet@1.2.0/dist/leaflet.js"></script>
     <script src="/dist/build.js"></script>
 
   </body>
