se agrega captcha

--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link href="/src/assets/bootstrap/styles.css" rel="stylesheet"/>
     <!-- vue -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.2.0/dist/leaflet.css">
+    <script src="https://www.google.com/recaptcha/api.js?onload=vueRecaptchaApiLoaded&render=explicit" async defer>
+    </script>
 
 
   </head>
