Se agrega para configuracion de SEO

--- a/index.html
+++ b/index.html
@@ -3,10 +3,41 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Seguridad Denuncia Jujuy</title>
+    <meta name="robots" content="index,follow" />
+		<meta name="distribution" content="global"/>
+		<meta name="rating" content="general"/>
+		<meta name="language" content="es"/>
+    <meta name="keywords" content="Jujuy,Denuncia,El Vecino Avisa,Ministerio Seguridad Jujuy,Avisa,Vecino,Jujuy,Policia,Policia de Jujuy"/>
 
+    <title>El Vecino Avisa Jujuy | Jujuy San Salvador de Jujuy</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+    <meta name="description" content="Realice su Denuncia de manera online a traves del Vecino Avisa Jujuy" />
+    <meta itemprop="name" content="El Vecino Avisa" />
+		<meta property="og:title" content="Ministerio de Seguridad. El Vecino Avisa" />
+    <meta name="twitter:title" content="El Vecino Avisa" />
+    <meta itemprop="keywords" content="Vecino"/>
+		<meta itemprop="keywords" content="El Vecino Avisa"/>
+		<meta itemprop="keywords" content="Ministerio de Seguridad Jujuy"/>
+		<meta itemprop="keywords" content="Jujuy"/>
+		<meta itemprop="keywords" content="Denuncia Online"/>
+		<meta itemprop="keywords" content="Sistema de Denuncia Jujuy"/>
+		<meta itemprop="keywords" content="El Vecino Avisa Jujuy"/>
+		<meta itemprop="keywords" content="Policiales"/>
+		<meta itemprop="keywords" content="Policia de Jujuy"/>
+		<meta itemprop="keywords" content="Policia"/>
+		<meta itemprop="keywords" content="Denuncias"/>
+
+    <meta name="google-site-verification" content="YF7_Jg0iitThus13VwPw7kamhI4LlkPA90XAS7lv2Pc" />
+
+
+    <!-- dev
     <link href="/src/assets/bootstrap/yeti/bootstrap.css" rel="stylesheet"/>
     <link href="/src/assets/bootstrap/styles.css" rel="stylesheet"/>
+    -->
+    <!-- production -->
+     <link href="assets/bootstrap/yeti/bootstrap.css" rel="stylesheet"/>
+     <link href="assets/bootstrap/styles.css" rel="stylesheet"/>
+
     <!-- vue -->
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.2.0/dist/leaflet.css">
     <script src="https://www.google.com/recaptcha/api.js?onload=vueRecaptchaApiLoaded&render=explicit" async defer>
@@ -18,7 +49,6 @@
     <div id="app"></div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/leaflet@1.2.0/dist/leaflet.js"></script>
-    <script src="/dist/build.js"></script>
-
+    <!--   <script src="/dist/build.js"></script> -->
   </body>
 </html>
