--- a/index.html
+++ b/index.html
@@ -49,6 +49,6 @@
     <div id="app"></div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/leaflet@1.2.0/dist/leaflet.js"></script>
-    <!--   <script src="/dist/build.js"></script> -->
+    <script src="/dist/build.js"></script>
   </body>
 </html>
