--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 		<meta name="distribution" content="global"/>
 		<meta name="rating" content="general"/>
 		<meta name="language" content="es"/>
-    <meta name="keywords" content="Jujuy,Denuncia,El Vecino Avisa,Ministerio Seguridad Jujuy,Avisa,Vecino,Jujuy,Policia,Policia de Jujuy"/>
+    <meta name="keywords" content="Jujuy,Reporte,El Vecino Avisa,Ministerio Seguridad Jujuy,Avisa,Vecino,Jujuy,Policia,Policia de Jujuy"/>
 
     <title>El Vecino Avisa Jujuy | Jujuy San Salvador de Jujuy</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-    <meta name="description" content="Realice su Denuncia de manera online a traves del Vecino Avisa Jujuy" />
+    <meta name="description" content="Realice su Reporte de manera online a traves del Vecino Avisa Jujuy" />
     <meta itemprop="name" content="El Vecino Avisa" />
 		<meta property="og:title" content="Ministerio de Seguridad. El Vecino Avisa" />
     <meta name="twitter:title" content="El Vecino Avisa" />
@@ -19,13 +19,13 @@
 		<meta itemprop="keywords" content="El Vecino Avisa"/>
 		<meta itemprop="keywords" content="Ministerio de Seguridad Jujuy"/>
 		<meta itemprop="keywords" content="Jujuy"/>
-		<meta itemprop="keywords" content="Denuncia Online"/>
-		<meta itemprop="keywords" content="Sistema de Denuncia Jujuy"/>
+		<meta itemprop="keywords" content="Reporte Online"/>
+		<meta itemprop="keywords" content="Sistema de Reporte Jujuy"/>
 		<meta itemprop="keywords" content="El Vecino Avisa Jujuy"/>
 		<meta itemprop="keywords" content="Policiales"/>
 		<meta itemprop="keywords" content="Policia de Jujuy"/>
 		<meta itemprop="keywords" content="Policia"/>
-		<meta itemprop="keywords" content="Denuncias"/>
+		<meta itemprop="keywords" content="Reportes"/>
 
     <meta name="google-site-verification" content="YF7_Jg0iitThus13VwPw7kamhI4LlkPA90XAS7lv2Pc" />
 
@@ -49,6 +49,6 @@
     <div id="app"></div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/leaflet@1.2.0/dist/leaflet.js"></script>
-    <script src="/dist/build.js"></script>
+    <!--<script src="/dist/build.js"></script>-->
   </body>
 </html>
